force-app/main/default/staticresources/python/Disappear/src/objects/Study__c.object
<CustomObject>
    <fields>
        <fullName>Acronym__c</fullName>
        <label>Acronym</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amgen_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amgen Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investigator__c</fullName>
        <label>Investigator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Study_Status_Date__c</fullName>
        <label>Latest Study/Project Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Study_status__c</fullName>
        <label>Latest Study/Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accrued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Internal_Contacts__c</fullName>
        <label>Legacy Internal Contacts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCT__c</fullName>
        <label>NCT#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N__c</fullName>
        <description>Number of subjects</description>
        <inlineHelpText>Number of subjects</inlineHelpText>
        <label>N</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PASS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PASS field/flag for tracking.</description>
        <label>PASS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posted_on_ClinTrials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted on Clinical Trials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Department that sponsor this Project</description>
        <label>Project Sponsor</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudySponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Phase__c</fullName>
        <label>Study/Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Investigator Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1b/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2/3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreClinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1/2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Study_TA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study/Project TA</label>
        <referenceTo>TherapeuticArea__c</referenceTo>
        <relationshipLabel>Studies/Projects</relationshipLabel>
        <relationshipName>Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Type__c</fullName>
        <label>Study/Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Analysis of existing Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chart Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-sectional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epidemiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Econ Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Vitro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUE/DUE Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PK-PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreClinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry/Observational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>Study/Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Acronym__c</columns>
        <columns>Title__c</columns>
        <columns>Study_Type__c</columns>
        <columns>Published_Date__c</columns>
        <columns>Study_Phase__c</columns>
        <columns>Project_Sponsor__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Study_search</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Acronym__c</columns>
        <columns>Title__c</columns>
        <columns>Study_Type__c</columns>
        <columns>Published_Date__c</columns>
        <columns>Study_Phase__c</columns>
        <columns>Project_Sponsor__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2015</value>
        </filters>
        <label>Study # search</label>
    </listViews>
    <nameField>
        <label>Study/Project #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studies/Projects</pluralLabel>
    <recordTypes>
        <fullName>LegacyStudyRecord</fullName>
        <active>true</active>
        <description>Used for legacy data migration from Siebel</description>
        <label>LegacyStudyRecord</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Study</fullName>
        <active>true</active>
        <label>Study</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>